--- a/build.gradle
+++ b/build.gradle
@@ -27,5 +27,6 @@ dependencies {
 
     compile 'com.h2database:h2:1.4.192'
 
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
