--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.driver-class-name = org.h2.Driver
 
 spring.datasource.schema = create-drop
 
-spring.datasource.url = jdbc:h2:tcp://localhost/./database/my_shop
+#spring.datasource.url = jdbc:h2:tcp://localhost/./database/my_shop
 
 # hopefully SQL queries will be printed to console
 
