Disabled frame options to view embedded database by console.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # database stuff for now here. Later may be we'll use
 
+spring.h2.console.enabled=true
+
 # @christherama manual config
 
 spring.datasource.username = sa
